--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=./test-utils/custom-test-env.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
