--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "base64-js": "^1.5.1",
+    "humanize-duration": "^3.25.0",
+    "luxon": "^1.25.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-error-boundary": "^3.1.0",
@@ -44,6 +46,8 @@
     ]
   },
   "devDependencies": {
+    "@types/humanize-duration": "^3.18.1",
+    "@types/luxon": "^1.25.0",
     "@types/react-router-dom": "^5.1.6"
   }
 }
