--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.10",
     "base64-js": "^1.5.1",
     "humanize-duration": "^3.25.0",
+    "jwt-decode": "^3.1.2",
     "luxon": "^1.25.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
